RESOLVED FIXED236841
[LFC][IFC] Fix ideographic baseline for atomic inline level boxes with non-zero descent
https://bugs.webkit.org/show_bug.cgi?id=236841
Summary [LFC][IFC] Fix ideographic baseline for atomic inline level boxes with non-ze...
alan
Reported 2022-02-18 08:54:25 PST
ssia
Attachments
Patch (4.31 KB, patch)
2022-02-18 08:59 PST, alan
no flags
alan
Comment 1 2022-02-18 08:59:55 PST
EWS
Comment 2 2022-02-18 14:33:52 PST
Committed r290170 (247503@main): <https://commits.webkit.org/247503@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452522 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-18 14:34:18 PST
Note You need to log in before you can comment on or make changes to this bug.