[LFC][IFC] Fix ideographic baseline for atomic inline level boxes with non-zero descent https://bugs.webkit.org/show_bug.cgi?id=236841

Reviewed by Antti Koivisto.

In most cases atomic inline level boxes have zero descent values. However the ideographic should
include the descent value (see RenderBox::baselinePosition)
This patch also removes the check for orthogonal content since it is already covered at LineLayout::updateLayoutBoxDimensions
(getting the correct baseline value that is).

* layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::adjustIdeographicBaselineIfApplicable):



Canonical link: https://commits.webkit.org/247503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290170 268f45cc-cd09-0410-ab3c-d52691b4dbfc